--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,12 +35,12 @@
     <depends>com.intellij.modules.lang</depends>
 
     <!-- 可选依赖，根据不同 IDE 自动启用 -->
-    <depends optional="true">com.intellij.modules.java</depends>
-    <depends optional="true">com.intellij.modules.python</depends>
-    <depends optional="true">com.intellij.modules.go</depends>
-    <depends optional="true">com.intellij.modules.php</depends>
-    <depends optional="true">com.intellij.modules.ruby</depends>
-    <depends optional="true">com.intellij.modules.rider</depends>
+    <depends optional="true" config-file="java-features.xml">com.intellij.modules.java</depends>
+    <depends optional="true" config-file="python-features.xml">com.intellij.modules.python</depends>
+    <depends optional="true" config-file="go-features.xml">com.intellij.modules.go</depends>
+    <depends optional="true" config-file="php-features.xml">com.intellij.modules.php</depends>
+    <depends optional="true" config-file="ruby-features.xml">com.intellij.modules.ruby</depends>
+    <depends optional="true" config-file="rider-features.xml">com.intellij.modules.rider</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <projectViewNodeDecorator implementation="com.weakviord.filetagger.ui.FileTagDecorator"/>
